# tph

./: MANIFEST.in  README.md  pyproject.toml
src/tph/: TPHlrgb.py  comp.json  download.py  humanise.py
tests/: test.py
